Covers from GitHub, updated manifest

--- a/imjoy-plugins/HPA-Classification.imjoy.html
+++ b/imjoy-plugins/HPA-Classification.imjoy.html
@@ -1,4 +1,4 @@
-<docs>
+﻿<docs>
 
   This plugin allows to predict the subcellular protein localization pattern for a provided image. 
   
@@ -23,7 +23,7 @@
           "placeholder": "ShuffleNet-V2"
       }
     }],
-    "version": "0.1.22",
+    "version": "0.1.23",
     "api_version": "0.1.2",
     "url": "",
     "description": "ShuffleNetV2 for HPA.",
@@ -39,7 +39,7 @@
       ],
     "dependencies": ["https://raw.githubusercontent.com/imjoy-team/example-plugins/master/imjoy-plugins/HPA-Image-Selection.imjoy.html"],
     "defaults": {"w": 60, "h": 20, "standalone": true},
-    "cover": "https://dl.dropbox.com/s/87w11rqi5qq1ftb/hpa-classification-v0.1.17.gif"
+    "cover": "https://imjoy-team.github.io/example-plugins/hpa-classification/hpa-classification-cover.gif"
   }
   </config>
   
