--- a/imjoy-plugins/maui-demo.imjoy.html
+++ b/imjoy-plugins/maui-demo.imjoy.html
@@ -13,7 +13,7 @@ This plugin is ported from: https://github.com/BIMSBbioinfo/maui/blob/master/vig
   "name": "maui-demo",
   "type": "native-python",
   "version": "0.1.0",
-  "description": "A domo plugin for Multi-omics Autoencoder Integration: Deep learning-based heterogenous data analysis toolkit",
+  "description": "A demo plugin for Multi-omics Autoencoder Integration: Deep learning-based heterogenous data analysis toolkit",
   "tags": [],
   "ui": "",
   "cover": "",
@@ -21,12 +21,12 @@ This plugin is ported from: https://github.com/BIMSBbioinfo/maui/blob/master/vig
   "outputs": null,
   "flags": [],
   "icon": "extension",
-  "api_version": "0.1.6",
+  "api_version": "0.1.7",
   "env": "conda create -n maui python=3.6",
   "permissions": [],
   "requirements": ["maui-tools", "scikit-learn", "pandas", "matplotlib", "seaborn==0.9.0", "lifelines==0.14.6"],
   "dependencies": ["oeway/ImJoy-Plugins:Im2Im-Dashboard"],
-  "cover": "https://dl.dropbox.com/s/kaugiuiqc6jcjkb/manui-training.png"
+  "cover": "https://imjoy-team.github.io/example-plugins/maui/maui-training.png"
 }
 </config>
 
