--- a/imjoy-plugins/CARE.imjoy.html
+++ b/imjoy-plugins/CARE.imjoy.html
@@ -1,4 +1,4 @@
-﻿<docs lang="markdown">
+<docs lang="markdown">
 # CARE
 
 Weigert et. al, Content-aware image restoration: pushing the limits of fluorescence microscopy, Nature Methods, 2018
@@ -13,7 +13,7 @@ This is a demo plugin ported from https://github.com/CSBDeep/CSBDeep/blob/master
 {
   "name": "CARE",
   "type": "native-python",
-  "version": "0.1.16",
+  "version": "0.1.17",
   "api_version": "0.1.2",
   "description": "This plugin demonstrates denoising using CARE.",
   "tags": ["CPU", "GPU", "macOS CPU"],
@@ -28,9 +28,9 @@ This is a demo plugin ported from https://github.com/CSBDeep/CSBDeep/blob/master
       "macOS CPU": "conda create -n care-mac-cpu python=3.6.7"
   },
   "requirements": {
-      "CPU": ["pip: tensorflow==1.8.0 Pillow csbdeep tifffile six"],
-      "GPU": ["pip: tensorflow-gpu==1.8.0 Pillow csbdeep tifffile six gputil"],
-      "macOS CPU": ["pip: tensorflow==1.5.0 Pillow csbdeep tifffile six"]
+      "CPU": ["pip: tensorflow==1.8.0 keras==2.1.5 Pillow csbdeep==0.4.1 tifffile six"],
+      "GPU": ["pip: tensorflow-gpu==1.8.0 keras==2.1.5 Pillow csbdeep==0.4.1 tifffile six gputil"],
+      "macOS CPU": ["pip: tensorflow==1.5.0 keras==2.1.5 Pillow csbdeep==0.4.1 tifffile six"]
   },
   "dependencies": [
       "oeway/ImJoy-Plugins:Im2Im-Dashboard",
@@ -472,7 +472,7 @@ The ImJoy plugins are ported from an **example code** to
 <a onclick="api.utils.openUrl('https://github.com/CSBDeep/CSBDeep/tree/master/examples/denoising3D')">perform denoising of 3D images.</a>
 
 <figure>
-    <img src="https://imjoy-team.github.io/example-plugins/care/care-dashboard-results.png" class="img-responsive p-centered" alt="care-3d-results">
+    <img src="https://www.dropbox.com/s/aramdvankqxh9h9/care-dashboard-results.png?dl=1" class="img-responsive p-centered" alt="care-3d-results">
     <figcaption>Example of CARE denoising: input image, target image, predicted image.</figcaption>
 </figure>
 
@@ -484,7 +484,7 @@ If you don't already have the plugin, you can install it from this <a onclick="a
 When starting the CARE plugin, you will see a **central launch pad** allowing to select the task to be performed:
 
 <figure>
-    <img src="https://imjoy-team.github.io/example-plugins/care/care-launchpad.png" class="img-responsive p-centered" alt="care-launchpad">
+    <img src="https://www.dropbox.com/s/rja3lvzwvihm6wz/care-launchpad.png?dl=1" class="img-responsive p-centered" alt="care-launchpad">
     <figcaption>Screen shot of CARE plugin launchpad.</figcaption>
 </figure>
 
@@ -505,7 +505,7 @@ Here we describe how to quickly get started with the CARE plugin.
 We select a remote engine (`imjoy.pasteur.cloud`) and the GPU computation (`TAG: GPU`) for fast training and prediction.
 
 <figure>
-    <img src="https://imjoy-team.github.io/example-plugins/care/care-gs-engine-tag.gif" width="250" class="img-responsive p-centered" alt="care-gs-engine-tag">
+    <img src="https://www.dropbox.com/s/m4hssh4dr2x4frg/care-gs-engine-tag.gif?dl=1" width="250" class="img-responsive p-centered" alt="gs-setting-up">
     <figcaption>Select remote engine and GPU tag.</figcaption>
 </figure>
 
@@ -514,7 +514,7 @@ We perform training on the example data on the plugin engine.
 We then set the model name to `CARE_demo_v1` and train for 60 epochs.
 
 <figure>
-    <img src="https://imjoy-team.github.io/example-plugins/care/care-gs-training.gif" class="img-responsive p-centered" alt="care-gs-training">
+    <img src="https://www.dropbox.com/s/0bv9mjm8gszmg5e/care-gs-training.gif?dl=1" class="img-responsive p-centered" alt="getting-started-training">
     <figcaption>Training with CARE.</figcaption>
 </figure>
 
@@ -522,7 +522,7 @@ While the network is training, progress can be monitored **dashboard**: it shows
 the trained model performs on validation data.
 
 <figure>
-    <img src="https://imjoy-team.github.io/example-plugins/care/care-gs-training-progress.gif" width="500" class="img-responsive p-centered" alt="care-gs-training-progress">
+    <img src="https://www.dropbox.com/s/4hqxua2764qpx04/care-gs-training-progress.gif?dl=1" width="500" class="img-responsive p-centered" alt="getting-started-training">
     <figcaption>Monitoring training with CARE.</figcaption>
 </figure>
 
@@ -533,14 +533,14 @@ Prediction with the trained model is performed:
 3. This will open a dedicated interface where prediction progress is shown.
 
 <figure>
-    <img src="https://imjoy-team.github.io/example-plugins/care/care-gs-prediction.gif" class="img-responsive p-centered" alt="care-gs-prediction">
+    <img src="https://www.dropbox.com/s/i1rpi9ja84zcdxa/care-gs-prediction.gif?dl=1" class="img-responsive p-centered" alt="getting-started-training">
     <figcaption>Training with CARE.</figcaption>
 </figure>
 
 Once the prediction is done, you can inspect the prediction results and scroll through the z-stack of the sample.
 
 <figure>
-    <img src="https://imjoy-team.github.io/example-plugins/care/care-gs-prediction-inspection.gif" width="500" class="img-responsive p-centered" alt="care-gs-prediction-inspectio">
+    <img src="https://www.dropbox.com/s/1sjose7hwbpm883/care-gs-prediction-inspection.gif?dl=1" width="500" class="img-responsive p-centered" alt="getting-started-training">
     <figcaption>Monitoring training with CARE.</figcaption>
 </figure>
 
@@ -548,6 +548,11 @@ Once the prediction is done, you can inspect the prediction results and scroll t
 </attachment>
 
 <attachment name="data">
+<br>
+<p style="color:#FF0000">
+  FOR IMJOY REVIEWERS: if you use the provided remote-engine, example data is available at `imjoy/imjoy-examples/CARE-DATA`.
+  The respective file-dialogs will initiate at this repository.</p>
+<br>
 <p id="data-requirements">
 Here we describe briefly how the training images have to be provided: image format, naming scheme, and data organization.
 </p>
@@ -601,13 +606,13 @@ Once your ImJoy app is connected to one (or more) plugin engine(s), you can choo
 plugin should run. For this press on the icon next to the plugin name in the plugin menu.
 
 <figure>
-    <img src="https://imjoy-team.github.io/example-plugins/care/care-plugin-menu.png" class="img-responsive p-centered" alt="screen-shot-care">
+    <img src="https://www.dropbox.com/s/6c7eze7eidabdz8/care_plugin_menu.png?dl=1" class="img-responsive p-centered" alt="screen-shot-care">
     <figcaption>CARE plugin in the plugin menu.</figcaption>
 </figure>
 This will show a dropdown menu, where you can determine how and where the plugin is running.
 In the lower part of the dropdown menu you can then choose on which of the the available plugin engines the plugin should run.
 <figure>
-    <img src="https://imjoy-team.github.io/example-plugins/care/care-plugin-engines.png" class="img-responsive p-centered" alt="care-plugin-enginess">
+    <img src="https://www.dropbox.com/s/06wgxikauwv3lmk/care-plugin-engines.png?dl=1" class="img-responsive p-centered" alt="plugin-engines">
     <figcaption>Choosing the plugin engine.</figcaption>
 </figure>
 
@@ -615,7 +620,7 @@ In the lower part of the dropdown menu you can then choose on which of the the a
 Training can be performed on CPUs or GPUs. The latter is substantially faster. To switch
 between these computational modes, you can select the corresponding "tag". Currently supported are
 <figure>
-    <img src="https://imjoy-team.github.io/example-plugins/care/care-tags.png" class="img-responsive p-centered" alt="care-tags">
+    <img src="https://www.dropbox.com/s/k1ruchskrqtmqak/care-tags.png?dl=1" class="img-responsive p-centered" alt="tags">
     <figcaption>Choosing between GPU and CPU computing.</figcaption>
 </figure>
 
@@ -629,7 +634,7 @@ The default points to the zipped example data.
  containing the training data, e.g. the folder `tribolium` for the example data.
 
 <figure>
-    <img src="https://imjoy-team.github.io/example-plugins/care/care-select-folder.png" class="img-responsive  p-centered" alt="care-select-folder">
+    <img src="https://www.dropbox.com/s/zm59g9tsp1t55vx/care-select-folder.png?dl=1" class="img-responsive  p-centered" alt="selecting-training-data">
     <figcaption>Selecting training data from the plugin engine.</figcaption>
 </figure>
 
@@ -651,7 +656,7 @@ Once you specified the data, a dialog will be shown to configure the training. H
 * The name of the folder containing the target images, e.g. the folder `GT` containing the high SNR images.
 
 <figure>
-    <img src="https://imjoy-team.github.io/example-plugins/care/care-configure-training.png" width="300" class="img-responsive p-centered" alt="care-configure-training">
+    <img src="https://www.dropbox.com/s/e50qi8y5tz4ri4c/care-configure-training.png?dl=1" width="300" class="img-responsive p-centered" alt="training-configuration">
     <figcaption>Configuration parameters to train the CARE network.</figcaption>
 </figure>
 
@@ -674,7 +679,7 @@ This folder can found in the current ImJoy workspace in a folder called `models`
 but hoovering over the four squares in the upper left part of the interface, e.g. `default` for the example below.
 
 <figure>
-    <img src="https://imjoy-team.github.io/example-plugins/care/care-workspace.gif" class="img-responsive p-centered" alt="care-workspace">
+    <img src="https://www.dropbox.com/s/cwz7j8nfhc14mkw/care-workspace.gif?dl=1" class="img-responsive p-centered" alt="screen-shot-care">
     <figcaption>How to identify the current workspace.</figcaption>
 </figure>
 
@@ -688,6 +693,10 @@ workspace, you have to move up one folder and select your workspace name.
 </attachment>
 
 <attachment name="prediction">
+<p style="color:#FF0000">
+  FOR IMJOY REVIEWERS: if you use the provided remote-engine, a trained model is available at `imjoy/imjoy-examples/CARE-MODEL`.
+  The respective file-dialogs will initiate at this repository, and you can select the folder `CARE_model_2000steps` to use this model.</p>
+<br>
 Once a model is trained, you can use it for prediction.
 
 Data for prediction has to be stored in a folder with same name as the input images, e.g. `low` in the example data.
@@ -702,7 +711,7 @@ for each z-slice are stored as separate PNGs.
 This will then open a new interface, where progress on prediction is reported
 
 <figure>
-    <img src="https://imjoy-team.github.io/example-plugins/care/care-prediction.gif" class="img-responsive p-centered" alt="care-prediction">
+    <img src="https://www.dropbox.com/s/yybco7e2fz8ue3g/care-prediction.gif?dl=1" class="img-responsive p-centered" alt="screen-shot-care">
     <figcaption>CARE prediction interface.</figcaption>
 </figure>
 
