Fix skin leision analyser

--- a/imjoy-plugins/Skin-Lesion-Analyzer.imjoy.html
+++ b/imjoy-plugins/Skin-Lesion-Analyzer.imjoy.html
@@ -41,7 +41,7 @@ https://www.kaggle.com/vbookshelf/skin-lesion-analyzer-tensorflow-js-web-app
 
 <script lang="javascript">
 
-SKIN_CLASSES = {
+const SKIN_CLASSES = {
   0: 'akiec, Actinic Keratoses (Solar Keratoses) or intraepithelial Carcinoma (Bowen’s disease)',
   1: 'bcc, Basal Cell Carcinoma',
   2: 'bkl, Benign Keratosis',
